# vklite

./: CMakeLists.txt  Input.hpp  Output.hpp  README.md  Sort.hpp  VulkanGenerator.cpp  XmlBin.hpp  XmlBinGenerator.cpp
include/vklite/: core.hpp  vk_mem_alloc.hpp  vulkan.hpp
